2002-07-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Version: 1.4.0
	* Source/NSFileManager.m: Don't standardise path before conferting to
	filesystem representation ... that would follow links automatically,
	and we mustn't do that.
	* Tools/gdomap.c: Security enhancement ... call setgroups()

2002-07-03  Adam Fedor  <fedor@gnu.org>

	* Version: 1.3.4
	* configure.ac: Remove warning about libffi
	* Documentation/news.texi: Update.

2002-07-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Ensure mime-version header appears
	before other headers. Fix bug in terminatimg mime data.

2002-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Don't write to pidfile until *after* setuid away
	from root. Bug reported by James Kehl <mkehl@gil.com.au>

2002-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Correct test for multipart content when
	generating raw data.  Fix by Mark Allison <mark@brainstorm.co.uk>

2002-06-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSFileHandle.h: New version of UnixFileHandle
	for combined unix/windoze use.
	* Source/GSFileHandle.m: New combined unix/windows implementation.
	* Source/NSFileHandle.m: Use GSFileHandle.
	* Source/GNUMakefile: Build GSFileHandle.
	* SSL/GSUnixSSLHandle.m: Update for combined GSFileHandle

2002-06-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([-respondsToSelector:]) handle nul selectors.
	Bug report by Andy Ruder <aeruder@yahoo.com>

2002-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Change to quote strings in plist output
	aggressively (quote characters that don't really need quoting)
	while still parsing flexibly ... ie handle unquoted strings as
	long as they don't contain 'special' characters.
	Fix for Tom Hageman <th@xs4all.nl>

2002-06-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Tools/AGSParser.m: ([-parseDeclaration:]) Correct wrongly